[tool.poetry]
name = "tttddd"
version = "0.0.1"
description = ""
authors = ["Dzmitry Makhrachou"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
sqlalchemy = "^1.3.22"
databases = {extras = ["postgresql"], version = "^0.4.1"}
pydantic = {extras = ["email"], version = "^1.7.3"}
psycopg2-binary = "*"
injector = "^0.18.4"
alembic = "^1.4.3"
uvicorn = "^0.13.2"
lazy_load = "^0.8.2"
funcy = "^1.15"
pydantic_typeddict = "^0.1.0"
arrow = "^0.17.0"
eventsourcing = {extras = ["sqlalchemy"], version = "^8.2.4"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.790"
pytest-cov = "^2.10.1"
isort = {extras = ["pyproject"], version = "^4.3.21"}
pre-commit = "^2.9.3"
flake8 = "^3.8.4"
autoflake = "^1.4"
sphinx = "^3.3.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
flake8-annotations = "^2.4.1"
sphinx-autodoc-typehints = "^1.11.1"
sqlalchemy-utils = "^0.36.8"
pytest-dotenv = "^0.5.2"
pytest-faker = "^2.0.0"
sphinx_rtd_theme = "^0.5.0"
safety = "^1.9.0"
autopep8 = "^1.5.4"
sphinxcontrib-httpdomain = "^1.7.0"
pampy = "^0.3.0"
typer = "^0.3.2"
alt-pytest-asyncio = "^0.5.3"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.4.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["tttddd"]
skip = ["venv", ".git", "migrations"]
reverse_relative = true
combine_as_imports = true
no_lines_before = "LOCALFOLDER"
lexicographical = true
no_inline_sort = false
case_sensitive = true
order_by_type = false

[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
